; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/ipv4/extr_tcp_input.c_tcp_moderate_cwnd.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/ipv4/extr_tcp_input.c_tcp_moderate_cwnd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tcp_sock = type { i32, i32 }

@tcp_time_stamp = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tcp_sock*)* @tcp_moderate_cwnd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tcp_moderate_cwnd(%struct.tcp_sock* %0) #0 {
  %2 = alloca %struct.tcp_sock*, align 8
  store %struct.tcp_sock* %0, %struct.tcp_sock** %2, align 8
  %3 = load %struct.tcp_sock*, %struct.tcp_sock** %2, align 8
  %4 = getelementptr inbounds %struct.tcp_sock, %struct.tcp_sock* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.tcp_sock*, %struct.tcp_sock** %2, align 8
  %7 = call i64 @tcp_packets_in_flight(%struct.tcp_sock* %6)
  %8 = load %struct.tcp_sock*, %struct.tcp_sock** %2, align 8
  %9 = call i64 @tcp_max_burst(%struct.tcp_sock* %8)
  %10 = add nsw i64 %7, %9
  %11 = call i32 @min(i32 %5, i64 %10)
  %12 = load %struct.tcp_sock*, %struct.tcp_sock** %2, align 8
  %13 = getelementptr inbounds %struct.tcp_sock, %struct.tcp_sock* %12, i32 0, i32 1
  store i32 %11, i32* %13, align 4
  %14 = load i32, i32* @tcp_time_stamp, align 4
  %15 = load %struct.tcp_sock*, %struct.tcp_sock** %2, align 8
  %16 = getelementptr inbounds %struct.tcp_sock, %struct.tcp_sock* %15, i32 0, i32 0
  store i32 %14, i32* %16, align 4
  ret void
}

declare dso_local i32 @min(i32, i64) #1

declare dso_local i64 @tcp_packets_in_flight(%struct.tcp_sock*) #1

declare dso_local i64 @tcp_max_burst(%struct.tcp_sock*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
